[package]
name = "buzzinga"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
cron = "0.12.1"
dotenv = "0.15.0"
ffmpeg-next = "7.0.4"
log = "0.4.22"
log4rs = "1.3.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
roux = { path = "../roux/" }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
